test/toplevelAnnotation4.slq

Zneighs : !ℕ[][] := [ /// error
  [ 0, 1/2, 3, 4 ],
  [ 1, 2,   4, 5 ],
  [ 3, 4,   6, 7 ],
  [ 4, 5,   7, 8 ]
];
